analysis path embedding space

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             "args": [
                 "--no-rdf_downloading",
                 "--no-preprocessing",
-                "--no-valuenet"
+                "--no-valuenet",
             ]
         },
         {
